--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
   <div id="app">
   </div>
   <!-- config -->
+  <!-- assetlinks -->
   <!-- Start of cookie-banner -->
   <!-- End of cookie-banner -->
   <!-- Start of stonly-widget -->
