YLP-3151 Display Night mode events in Daily view

--- a/packages/tideline/css/tideline-colors.less
+++ b/packages/tideline/css/tideline-colors.less
@@ -71,6 +71,9 @@
 // physical activty colors
 @physicalactivity: #00D3E6;
 
+// Night mode event colors
+@nightmode: var(--night-mode);
+
 // Zen mode Event colors
 @zenmode: #9FCC93;
 @zentext: #85B179;
