--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -280,6 +280,12 @@ svg {
     opacity: 0.2;
   }
 }
+.d3-night {
+  &.d3-rect-night {
+    fill: @nightmode;
+    opacity: 0.9;
+  }
+}
 .d3-confidential {
   &.d3-back-confidential {
     fill: @confidentialmode;
