--- a/packages/viz/src/styles/colors.css
+++ b/packages/viz/src/styles/colors.css
@@ -60,6 +60,7 @@
   --bg-target: var(--info-color-main);
   --bg-high: var(--warning-color-50);
   --bg-very-high: var(--warning-color-main);
+  --night-mode: var(--info-color-10);
   --text-hover: #00D3D9;
   --blue-green-light: #12D3D8;
   --gray-medium: #989897;
