--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -207,13 +207,25 @@ svg {
   stroke-width: 1.5;
 }
 .d3-circle-zen {
-  fill: @zentext
+  fill: @zentext;
 }
 .d3-zen-text {
   fill: #FFFFFF;
   font-size: @font-size-small;
   dominant-baseline: central;
   text-anchor: middle;
+}
+.d3-superposition-circle {
+  fill: @event-superposition;
+  cursor: pointer;
+}
+.d3-superposition-text {
+  fill: #FFFFFF;
+  font-size: @font-size-small;
+  font-weight: bold;
+  dominant-baseline: central;
+  text-anchor: middle;
+  cursor: pointer;
 }
 .d3-confidential-text {
   fill: @confidentialtext;
