YLP-3333 Tooltip for Zen mode in Daily view

--- a/packages/dumb/src/styles/colors.css
+++ b/packages/dumb/src/styles/colors.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022-2024, Diabeloop
+ * Copyright (c) 2022-2025, Diabeloop
  *
  * All rights reserved.
  *
@@ -121,6 +121,7 @@
   smbg: #6480FB;
   smbgHeader: #E8ECFE;
   siteChange: #FCD144;
+  zenMode: #9FCC93;
   grey: #6D6D6D;
   lightGrey: #979797;
   darkGrey: #4E4E4F;
