Updated color from blue to grey

--- a/packages/tideline/css/tideline-colors.less
+++ b/packages/tideline/css/tideline-colors.less
@@ -83,7 +83,7 @@
 @confidentialtext: #5D5D5D;
 
 // Event superposition color
-@event-superposition: var(--event-superposition);
+@event-superposition: var(--gray-medium);
 
 // bolus color
 @bolus: var(--bolus, #178A7F);
