New behaviour based on severity + handle multiple alarm occurrences

--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -215,9 +215,17 @@ svg {
   dominant-baseline: central;
   text-anchor: middle;
 }
-.d3-superposition-circle {
-  fill: @event-superposition;
+.d3-superposition-circle-red {
   cursor: pointer;
+  fill: @event-superposition-red;
+}
+.d3-superposition-circle-orange {
+  cursor: pointer;
+  fill: @event-superposition-orange;
+}
+.d3-superposition-circle-grey {
+  cursor: pointer;
+  fill: @event-superposition-grey;
 }
 .d3-superposition-text {
   fill: #FFFFFF;
