--- a/packages/tideline/css/tideline-colors.less
+++ b/packages/tideline/css/tideline-colors.less
@@ -83,7 +83,9 @@
 @confidentialtext: #5D5D5D;
 
 // Event superposition color
-@event-superposition: var(--gray-medium);
+@event-superposition-red: var(--red-main);
+@event-superposition-orange: var(--orange-main);
+@event-superposition-grey: var(--gray-medium);
 
 // bolus color
 @bolus: var(--bolus, #178A7F);
