YLP-3611 Handle events superposition on Daily view (#1829)

--- a/packages/dumb/src/components/tooltips/events-superposition-popover/events-superposition-popover.css
+++ b/packages/dumb/src/components/tooltips/events-superposition-popover/events-superposition-popover.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022-2025, Diabeloop
+ * Copyright (c) 2025, Diabeloop
  *
  * All rights reserved.
  *
@@ -25,37 +25,11 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-.container {
-  composes: smallSize from '../../../styles/typography.css';
-  composes: container from '../../../styles/tooltip-common.css';
-  line-height: 20px;
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  column-gap: .4em;
-  max-height: 480px;
-  overflow-y: hidden;
-}
-
-.date {
-  text-align: right;
-}
-
-.label {
+.title {
   font-weight: bold;
 }
 
-.previous {
-  text-align: right;
-  white-space: nowrap;
-}
-
-.value {
-  font-weight: bold;
-  color: var(--activeValue);
-  text-align: right;
-}
-
-.value-no-prev {
-  grid-column-start: 3;
-  grid-column-end: span 3;
+.icon {
+  width: 36px;
+  height: auto;
 }
