--- a/packages/tideline/css/tideline-colors.less
+++ b/packages/tideline/css/tideline-colors.less
@@ -68,7 +68,7 @@
 @rescuecarbs: var(--rescuecarbs, #fa9494);
 @parameter: #d1d0cf;
 
-// physical activty colors
+// physical activity colors
 @physicalactivity: #00D3E6;
 
 // Night mode event colors
@@ -81,6 +81,11 @@
 // Confidential mode Event colors
 @confidentialmode: #ffffff;
 @confidentialtext: #5D5D5D;
+
+// Event superposition color
+@event-superposition-red: var(--red-main);
+@event-superposition-orange: var(--orange-main);
+@event-superposition-grey: var(--gray-medium);
 
 // bolus color
 @bolus: var(--bolus, #178A7F);
