--- a/packages/tideline/css/tideline-colors.less
+++ b/packages/tideline/css/tideline-colors.less
@@ -54,6 +54,7 @@
 @bg-very-low: var(--bg-very-low);
 @bg-low: var(--bg-low);
 @bg-target: var(--bg-target);
+@bg-tight-range: var(--bg-tight-range);
 @bg-high: var(--bg-high);
 @bg-very-high: var(--bg-very-high);
 @bg-low-focus: #9d1d36;
