--- a/packages/tideline/css/tideline-svg.less
+++ b/packages/tideline/css/tideline-svg.less
@@ -26,6 +26,9 @@ g.svg-tooltip-cbg {
   &.d3-bg-target path.tooltip-outline {
     fill: @bg-target;
   }
+  &.d3-bg-tight-range path.tooltip-outline {
+    fill: @bg-tight-range;
+  }
   &.d3-bg-high path.tooltip-outline {
     fill: @bg-high;
   }
@@ -58,6 +61,9 @@ g.svg-tooltip-smbg {
   }
   &.d3-bg-target {
     stroke: @bg-target;
+  }
+  &.d3-bg-tight-range {
+    stroke: @bg-tight-range;
   }
   &.d3-bg-high {
     stroke: @bg-high;
