--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -376,6 +376,9 @@ svg {
     &.d3-bg-target {
       fill: @bg-target;
     }
+    &.d3-bg-tight-range {
+      fill: @bg-tight-range;
+    }
     &.d3-bg-high {
       fill: @bg-high;
     }
@@ -408,6 +411,10 @@ svg {
   &.d3-bg-target {
     fill: @bg-target;
     stroke: @bg-target;
+  }
+  &.d3-bg-tight-range {
+    fill: @bg-tight-range;
+    stroke: @bg-tight-range;
   }
   &.d3-bg-high {
     fill: @bg-high;
@@ -660,6 +667,9 @@ text.d3-tabular-ui {
       }
       &.d3-bg-target {
         fill: @bg-target;
+      }
+      &.d3-bg-tight-range {
+        fill: @bg-tight-range;
       }
       &.d3-bg-high {
         fill: @bg-high;
