--- a/packages/dumb/src/components/stats/stat-legend/stat-legend.css
+++ b/packages/dumb/src/components/stats/stat-legend/stat-legend.css
@@ -59,5 +59,5 @@
 }
 
 .tight-range-border-bottom {
-  border-bottom-color: var(--info-color-main);
+  border-bottom-color: var(--bg-tight-range);
 }
