--- a/packages/dumb/src/components/tooltips/common/tooltip/tooltip.css
+++ b/packages/dumb/src/components/tooltips/common/tooltip/tooltip.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022-2023, Diabeloop
+ * Copyright (c) 2022-2025, Diabeloop
  *
  * All rights reserved.
  *
@@ -29,10 +29,12 @@
   display: block;
   composes: defaultSize from '../../../../styles/typography.css';
   background-color: #FFFFFF;
-  border: solid;
+  /*border: solid;*/
   pointer-events: none;
   position: absolute;
-  border-radius: 4px;
+  border-radius: 24px;
+  box-shadow: 4px 4px 20px -5px rgba(2, 57, 79, 0.12);
+  min-width: 100px;
 }
 
 .content {
@@ -40,14 +42,15 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 5px 10px;
+  padding-left: 24px;
+  padding-right: 24px;
   box-sizing: border-box;
 }
 
 .title {
   composes: mediumContrastText from '../../../../styles/typography.css';
   composes: content;
-  background-color: var(--tooltip-title-bg);
+  /*background-color: var(--tooltip-title-bg);*/
 }
 
 .titleContent {
@@ -61,6 +64,10 @@
 
 .titleDate {
   margin-right: auto;
+}
+
+.titleValue {
+  font-weight: bold;
 }
 
 .tail {
