YLP-3640 New UI for tooltips in Daily view

--- a/branding/palette.css
+++ b/branding/palette.css
@@ -37,6 +37,7 @@
   --info-color-10: #E6F6FD;
 
   --dark-blue-main: #035271;
+  --dark-blue-background: #E6EEF1;
   --purple-main: #85529C;
 
   --grey-25: #D5D5D5;
