--- a/packages/dumb/src/components/tooltips/bolus-tooltip/bolus-tooltip.css
+++ b/packages/dumb/src/components/tooltips/bolus-tooltip/bolus-tooltip.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Diabeloop
+ * Copyright (c) 2023-2025, Diabeloop
  *
  * All rights reserved.
  *
@@ -24,11 +24,6 @@
  * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-
-.container {
-  composes: containerFlex from '../../../styles/tooltip-common.css';
-  min-width: 160px;
-}
 
 .dividerSmall {
   background-color: var(--bolus);
