--- a/packages/dumb/src/components/tooltips/stat-tooltip/stat-tooltip.css
+++ b/packages/dumb/src/components/tooltips/stat-tooltip/stat-tooltip.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Diabeloop
+ * Copyright (c) 2022-2025, Diabeloop
  *
  * All rights reserved.
  *
@@ -60,4 +60,8 @@
 
 .tooltipIcon > img {
   width: 0.9em;
+}
+
+.container {
+  margin: 8px;
 }
