--- a/packages/dumb/src/styles/colors.css
+++ b/packages/dumb/src/styles/colors.css
@@ -106,11 +106,8 @@
   statDisabled: #E7E9EE;
   veryLow: #e12a4e;
   low: #e85f7a;
-  lowBackground: #FDF4F6;
   target: #009bd6;
-  targetBackground: #F2FAFD;
   high: #f5a861;
-  highBackground: #FEF9F4;
   veryHigh: #f28b2d;
   insulin: #0096D1;
   white: #FFFFFF;
@@ -129,4 +126,11 @@
   grey: #6D6D6D;
   lightGrey: #979797;
   darkGrey: #4E4E4F;
+  redBackground: #FCEAED;
+  blueBackground: #E6F6FD;
+  orangeBackground: #FEF3EA;
+  greyBackground: #F7F7F7;
+  darkBlueBackground: #E6EEF1;
+  purpleBackground: #F3EEF5;
+  greenBackground: #E9F9F8;
 }
