YLP-3640 New UI for tooltips in Daily view (#1838)

--- a/packages/dumb/src/styles/colors.css
+++ b/packages/dumb/src/styles/colors.css
@@ -126,4 +126,11 @@
   grey: #6D6D6D;
   lightGrey: #979797;
   darkGrey: #4E4E4F;
+  redBackground: #FCEAED;
+  blueBackground: #E6F6FD;
+  orangeBackground: #FEF3EA;
+  greyBackground: #F7F7F7;
+  darkBlueBackground: #E6EEF1;
+  purpleBackground: #F3EEF5;
+  greenBackground: #E9F9F8;
 }
