--- a/packages/dumb/src/components/tooltips/common/tooltip/tooltip.css
+++ b/packages/dumb/src/components/tooltips/common/tooltip/tooltip.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022-2023, Diabeloop
+ * Copyright (c) 2022-2025, Diabeloop
  *
  * All rights reserved.
  *
@@ -27,12 +27,14 @@
 
 .tooltip {
   display: block;
-  composes: defaultSize from '../../../../styles/typography.css';
+  composes: smallSize from '../../../../styles/typography.css';
   background-color: #FFFFFF;
-  border: solid;
   pointer-events: none;
   position: absolute;
-  border-radius: 4px;
+  border-radius: 24px;
+  box-shadow: 4px 4px 20px -5px rgba(2, 57, 79, 0.12);
+  overflow: hidden;
+  z-index: 10;
 }
 
 .content {
@@ -40,33 +42,16 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 5px 10px;
+  padding-left: 24px;
+  padding-right: 24px;
   box-sizing: border-box;
 }
 
-.title {
-  composes: mediumContrastText from '../../../../styles/typography.css';
-  composes: content;
-  background-color: var(--tooltip-title-bg);
-}
-
-.titleContent {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  width: 100%;
-  column-gap: 0.5em;
-}
-
 .titleDate {
-  margin-right: auto;
+  margin-left: auto;
+  padding-left: 8px;
 }
 
-.tail {
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-color: transparent;
-  position: absolute;
+.titleValue {
+  font-weight: bold;
 }
