YLP-3580 Working version

--- a/packages/tideline/css/tideline-colors.less
+++ b/packages/tideline/css/tideline-colors.less
@@ -111,6 +111,10 @@
 @matched: #0B9EB3;
 @matched-text: #727375;
 
+// IOB colors
+@iob: var(--basal-automated);
+@iob-hover: var(--bg-tight-range);
+
 // settings
 @settings-table-fill: #F7F7F8;
 @settings-table-value: #1B6C9E;
