--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -562,6 +562,14 @@ text.d3-tabular-ui {
   }
 }
 
+.d3-iob {
+  fill: @iob;
+}
+
+.d3-iob-hover {
+  fill: @iob-hover;
+}
+
 .d3-row-label {
   dominant-baseline: central;
   fill: @text;
