--- a/packages/dumb/src/components/tooltips/time-change-tooltip/time-change-tooltip.css
+++ b/packages/dumb/src/components/tooltips/time-change-tooltip/time-change-tooltip.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023-2025, Diabeloop
+ * Copyright (c) 2025, Diabeloop
  *
  * All rights reserved.
  *
@@ -25,20 +25,6 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-import type BaseDatum from './basics/base-datum.model'
-import { type DatumType } from './enums/datum-type.enum'
-import { DeviceEventSubtype } from './enums/device-event-subtype.enum'
-
-export type TimeZoneChange = BaseDatum & {
-  type: DatumType.DeviceEvent
-  subType: DeviceEventSubtype.TimeChange
-  from: {
-    time: string
-    timeZoneName: string
-  }
-  to: {
-    time: string
-    timeZoneName: string
-  }
-  method: string
+.value {
+  text-align: right;
 }
