Fixed Trends size issue

--- a/packages/blip/app/components/patient-data.less
+++ b/packages/blip/app/components/patient-data.less
@@ -216,8 +216,13 @@ a.js-home {
   padding-bottom: 5px;
 }
 
-.patient-data-content {
-  min-height: @patient-data-chart-height;
+.patient-data-content-daily {
+  min-height: @patient-data-chart-daily-height;
+  position: relative;
+}
+
+.patient-data-content-trends {
+  min-height: @patient-data-chart-trends-height;
   position: relative;
 }
 
