fix PR comments

--- a/packages/yourloops/components/date-pickers/date-picker.css
+++ b/packages/yourloops/components/date-pickers/date-picker.css
@@ -29,11 +29,10 @@
   border: 1px solid var(--light-grey-border-color);
   background-color: white;
   color: black;
-  margin: 3px;
+  margin: 3px 3px 6px;
 }
 
 .calendarButton:disabled {
   color: rgba(0, 0, 0, 0.26);
   background-color: rgba(0, 0, 0, 0.12);
-  border: none;
 }
