add diabetic chip in the nav bar

--- a/branding/palette.css
+++ b/branding/palette.css
@@ -37,8 +37,14 @@
   --info-color-10: #E6F6FD;
 
   --dark-blue-main: #035271;
+  --dark-blue-light: #04668a;
+  --dark-blue-dark: #023748;
   --dark-blue-background: #E6EEF1;
   --purple-main: #85529C;
+
+  --pink-main: #e71980;
+  --pink-light: #ff69b4;
+  --pink-dark: #a11159;
 
   --grey-25: #D5D5D5;
 
