YLP-3701 First draft

--- a/packages/tideline/css/tideline-colors.less
+++ b/packages/tideline/css/tideline-colors.less
@@ -92,6 +92,7 @@
 @bolus: var(--bolus, #178A7F);
 @bolus-meal: var(--bolus-meal, #178A7F);
 @bolus-umm: var(--bolus-umm, #21C6B6);
+@bolus-eating-shortly: var(--bolus-eating-shortly);
 @bolus-correction: var(--bolus-correction, #9A78BD);
 @bolus-manual: var(--bolus-manual, #8C65D6);
 @bolus-pen: var(--bolus-pen, #85529C);
