--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -337,8 +337,11 @@ svg {
     fill: @bolus-manual !important;
   }
   &.d3-bolus-pen {
-      fill: @bolus-pen !important;
-    }
+    fill: @bolus-pen !important;
+  }
+  &.d3-bolus-eating-shortly {
+    fill: @bolus-eating-shortly !important;
+  }
   &.d3-bolus-undelivered {
     fill: @bolus-undelivered !important;
   }
