--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -258,6 +258,11 @@ svg {
 .d3-circle-rescuecarbs {
   fill: @rescuecarbs;
 }
+
+.d3-circle-eating-shortly {
+  fill: @bolus-eating-shortly;
+}
+
 .d3-rescuecarbs-text {
   fill: @text;
   font-size: @font-size-small;
