YLP-3754 Chip colors for profiles

--- a/branding/palette.css
+++ b/branding/palette.css
@@ -39,12 +39,15 @@
   --dark-blue-main: #035271;
   --dark-blue-light: #04668a;
   --dark-blue-dark: #023748;
+  --dark-blue-color-20: #CDDCE3;
   --dark-blue-background: #E6EEF1;
+
   --purple-main: #85529C;
 
   --pink-main: #e71980;
   --pink-light: #ff69b4;
   --pink-dark: #a11159;
+  --pink-color-20: #FAD1E6;
 
   --grey-25: #D5D5D5;
 
