--- a/packages/tideline/css/tideline.less
+++ b/packages/tideline/css/tideline.less
@@ -258,6 +258,11 @@ svg {
 .d3-circle-rescuecarbs {
   fill: @rescuecarbs;
 }
+
+.d3-circle-eating-shortly {
+  fill: @bolus-eating-shortly;
+}
+
 .d3-rescuecarbs-text {
   fill: @text;
   font-size: @font-size-small;
@@ -337,8 +342,11 @@ svg {
     fill: @bolus-manual !important;
   }
   &.d3-bolus-pen {
-      fill: @bolus-pen !important;
-    }
+    fill: @bolus-pen !important;
+  }
+  &.d3-bolus-eating-shortly {
+    fill: @bolus-eating-shortly !important;
+  }
   &.d3-bolus-undelivered {
     fill: @bolus-undelivered !important;
   }
